# google-ads-reports

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
examples/: README.md  basic_usage.py  custom_reports.py  error_handling.py  multiple_reports.py
google_ads_drv/: google_ads_drv.py
google_ads_reports/: client.py  models.py
src/google_ads_drv/: __init__.py  client.py  models.py  utils.py
src/google_ads_reports/: __init__.py  client.py  exceptions.py  google_ads_drv.py  retry.py
