[project]
name = "google-ads-drv"
version = "0.1.0"
description = "ETL driver module for Google Ads API data extraction and transformation"
authors = [{ name = "Joao Brito"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
keywords = ["google-ads", "pandas", "etl", "data-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed"
]
dependencies = [
    "google-ads>=24.0.0",
    "pandas>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "testcontainers[postgresql]>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/google-ads-drv"
Documentation = "https://github.com/your-username/google-ads-drv#readme"
Issues = "https://github.com/your-username/google-ads-drv/issues"

[tool.poetry]
packages = [{ include = "google_ads_drv"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
