[project]
name = "google-ads-reports"
version = "1.1.0"
description = "ETL module for Google Ads API v20 with database-optimized DataFrame processing"
authors = [{ name = "Joao Brito"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
keywords = ["google-ads", "pandas", "etl", "data-extraction", "reports"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed"
]
dependencies = [
    "google-ads>=24.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/machado000/google-ads-reports"
Documentation = "https://github.com/machado000/google-ads-reports#readme"
Issues = "https://github.com/machado000/google-ads-reports/issues"

[tool.poetry]
packages = [{ include = "google_ads_reports", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
